--- a/pages/16195.html
+++ b/pages/16195.html
@@ -1098,23 +1098,23 @@ margin-left: 0em;
 
 <p>The fundamental <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a>.</p>
 
-<p>The approximate value is <math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo><mn>1.6</mn><mspace width='thickmathspace'></mspace><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>35</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\sim 1.6 \;10^{-35}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/meter'>meter</a>.</p>
+<p>In comparison to macorscopic <a class='existingWikiWord' href='/nlab/show/physical+units'>physical units</a> such as the <a class='existingWikiWord' href='/nlab/show/meter'>meter</a>, the approximate value of the Planck length is <math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo><mn>1.6</mn><mspace width='thickmathspace'></mspace><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>35</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\sim 1.6 \;10^{-35}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/meter'>meter</a>.</p>
 
 <h2 id='definition_2'>Definition</h2>
 
-<p>Two important <a class='existingWikiWord' href='/nlab/show/physical+units'>physical units</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a> induced by a <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> are</p>
+<p>Two important <a class='existingWikiWord' href='/nlab/show/physical+units'>physical units</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a> induced by a <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> are</p>
 
 <ol>
 <li>
 <p>the <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>m</mi></msub><mo>≔</mo><mfrac><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>m</mi></msub><mo>≔</mo><mfrac><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
   \ell_m \coloneqq \frac{2 \pi \hbar}{m c}
 
 </annotation></semantics></math></div></li>
 
 <li>
 <p>the <em><a class='existingWikiWord' href='/nlab/show/Schwarzschild+radius'>Schwarzschild radius</a></em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>r</mi> <mi>m</mi></msub><mo>≔</mo><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>r</mi> <mi>m</mi></msub><mo>≔</mo><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>
   r_m \coloneqq 2 m G/c^2
 
 </annotation></semantics></math></div></li>
@@ -1124,20 +1124,20 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/gravitational+constant'>gravitational constant</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/gravitational+constant'>gravitational constant</a>;</p>
 </li>
 </ul>
 
 <p>Solving the <a class='existingWikiWord' href='/nlab/show/equation'>equation</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msub><mi>ℓ</mi> <mi>m</mi></msub></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>r</mi> <mi>m</mi></msub></mtd></mtr> <mtr><mtd><mo>⇔</mo></mtd> <mtd><mn>2</mn><mi>π</mi><mi>ℏ</mi><mo stretchy='false'>/</mo><mi>m</mi><mi>c</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msub><mi>ℓ</mi> <mi>m</mi></msub></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>r</mi> <mi>m</mi></msub></mtd></mtr> <mtr><mtd><mo>⇔</mo></mtd> <mtd><mn>2</mn><mi>π</mi><mi>ℏ</mi><mo stretchy='false'>/</mo><mi>m</mi><mi>c</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp; \ell_m &amp;=&amp; r_m
     \\
@@ -1145,14 +1145,14 @@ margin-left: 0em;
   }
 
 </annotation></semantics></math></div>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> yields the <em><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><msqrt><mi>π</mi></msqrt></mfrac></mstyle><msub><mi>m</mi> <mrow><mi>ℓ</mi><mo>=</mo><mi>r</mi></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>c</mi></mrow><mi>G</mi></mfrac></msqrt><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> yields the <em><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><msqrt><mi>π</mi></msqrt></mfrac></mstyle><msub><mi>m</mi> <mrow><mi>ℓ</mi><mo>=</mo><mi>r</mi></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>c</mi></mrow><mi>G</mi></mfrac></msqrt><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
    m_{P} \coloneqq \tfrac{1}{\sqrt{\pi}} m_{\ell = r} = \sqrt{\frac{\hbar c}{G}}
   \,.
 
 </annotation></semantics></math></div>
-<p>The corresponding <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a> <math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\ell_{m_{P}}</annotation></semantics></math> is given by the <em><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></em> <math class='maruku-mathml' display='inline' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub></mrow><annotation encoding='application/x-tex'>\ell_P</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0ac2d4f7c72760ea15a308540ff7ce8509cff7d_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>2</mn><mi>π</mi></mrow></mfrac></mstyle><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>G</mi></mrow><mrow><msup><mi>c</mi> <mn>3</mn></msup></mrow></mfrac></msqrt><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>
+<p>The corresponding <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a> <math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\ell_{m_{P}}</annotation></semantics></math> is given by the <em><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></em> <math class='maruku-mathml' display='inline' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub></mrow><annotation encoding='application/x-tex'>\ell_P</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c794f10eec7b9f4014bf65e78efb72e7824e8dfb_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>2</mn><mi>π</mi></mrow></mfrac></mstyle><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>G</mi></mrow><mrow><msup><mi>c</mi> <mn>3</mn></msup></mrow></mfrac></msqrt><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>
   \ell_{P} \coloneqq \tfrac{1}{2\pi} \ell_{m_P} = \sqrt{ \frac{\hbar G}{c^3} }
   \,
 
@@ -1165,11 +1165,19 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/string+length'>string length</a></p>
 </li>
 
 <li>
 <p><a href='string+theory#scales'>string theory – scales</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/near-horizon+geometry'>near-horizon geometry</a></p>
 </li>
 </ul>
 
@@ -1188,14 +1196,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  4, 2018 at 06:59:13.
+  Last revised on September  4, 2018 at 07:38:55.
   See the <a href="https://ncatlab.org/nlab/history/Planck length" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Planck+length" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Planck+length/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Planck+length" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Planck+length" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Planck+length" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Planck+length/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Planck+length" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Planck+length" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Planck length/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
