--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -306,38 +306,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/string+tension'>string tension</a><math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo>=</mo><mn>1</mn><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mi>α</mi> <mstyle scriptlevel='0'><mo>′</mo></mstyle></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>T = 1/(2\pi \alpha^\prime)</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/string+tension">string tension</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mn>2</mn><mi>π</mi><msup><mi>α</mi> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">T = 1/(2\pi \alpha^\prime)</annotation></semantics></math></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/string+length+scale'>string length scale</a><math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>l</mi> <mi>s</mi></msub><mo>=</mo><msqrt><mrow><mi>α</mi><mo>′</mo></mrow></msqrt></mrow><annotation encoding='application/x-tex'>l_s = \sqrt{\alpha&#39;}</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/string+length+scale">string length scale</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>l</mi> <mi>s</mi></msub><mo>=</mo><msqrt><mrow><mi>α</mi><mo>′</mo></mrow></msqrt></mrow><annotation encoding="application/x-tex">l_s = \sqrt{\alpha'}</annotation></semantics></math></p>
 </li>
 
 <li>
-<p>string <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> <math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>g</mi> <mi>s</mi></msub><mo>=</mo><msup><mi>e</mi> <mi>λ</mi></msup></mrow><annotation encoding='application/x-tex'>g_s = e^\lambda</annotation></semantics></math></p>
+<p>string <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupling constant</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>g</mi> <mi>s</mi></msub><mo>=</mo><msup><mi>e</mi> <mi>λ</mi></msup></mrow><annotation encoding="application/x-tex">g_s = e^\lambda</annotation></semantics></math></p>
 
-<p>(= radius of <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> compactification circle (<a href='http://ncatlab.org/nlab/show/M-theory#Witten95'>Witten 95</a>))</p>
+<p>(= radius of <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> compactification circle (<a href="http://ncatlab.org/nlab/show/M-theory#Witten95">Witten 95</a>))</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>: <math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>κ</mi><mo>∝</mo><msub><mi>g</mi> <mi>s</mi></msub><mo stretchy='false'>(</mo><mi>α</mi><mo>′</mo><msup><mo stretchy='false'>)</mo> <mn>6</mn></msup><mo>=</mo><msub><mi>g</mi> <mi>s</mi></msub><msubsup><mi>l</mi> <mi>s</mi> <mn>12</mn></msubsup></mrow><annotation encoding='application/x-tex'>\kappa \propto g_s (\alpha&#39;)^6 = g_s l_s^{12}</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/coupling+constant">coupling constant</a> of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>κ</mi><mo>∝</mo><msub><mi>g</mi> <mi>s</mi></msub><mo stretchy="false">(</mo><mi>α</mi><mo>′</mo><msup><mo stretchy="false">)</mo> <mn>6</mn></msup><mo>=</mo><msub><mi>g</mi> <mi>s</mi></msub><msubsup><mi>l</mi> <mi>s</mi> <mn>12</mn></msubsup></mrow><annotation encoding="application/x-tex">\kappa \propto g_s (\alpha')^6 = g_s l_s^{12}</annotation></semantics></math></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Newton%27s+constant'>Newton&#39;s constant</a> (before compactification) <math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mi>N</mi></msub><mo>=</mo><msup><mi>κ</mi> <mn>2</mn></msup><mo stretchy='false'>/</mo><mn>8</mn><mi>π</mi></mrow><annotation encoding='application/x-tex'>G_N = \kappa^2/8\pi</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/Newton%27s+constant">Newton's constant</a> (before compactification) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mi>N</mi></msub><mo>=</mo><msup><mi>κ</mi> <mn>2</mn></msup><mo stretchy="false">/</mo><mn>8</mn><mi>π</mi></mrow><annotation encoding="application/x-tex">G_N = \kappa^2/8\pi</annotation></semantics></math></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a><math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>l</mi> <mi>P</mi></msub><mo>=</mo><mo stretchy='false'>(</mo><mn>8</mn><mi>π</mi><msub><mi>G</mi> <mi>N</mi></msub><msup><mo stretchy='false'>)</mo> <mrow><mn>1</mn><mo stretchy='false'>/</mo><mn>24</mn></mrow></msup><mo>=</mo><msup><mi>κ</mi> <mrow><mn>1</mn><mo stretchy='false'>/</mo><mn>12</mn></mrow></msup><mo>∝</mo><msub><mi>l</mi> <mi>s</mi></msub><msubsup><mi>g</mi> <mi>s</mi> <mrow><mn>1</mn><mo stretchy='false'>/</mo><mn>12</mn></mrow></msubsup></mrow><annotation encoding='application/x-tex'>l_P = (8 \pi G_N)^{1/24} = \kappa^{1/12} \propto l_s g_s^{1/12}</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/Planck+length">Planck length</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>l</mi> <mi>P</mi></msub><mo>=</mo><mo stretchy="false">(</mo><mn>8</mn><mi>π</mi><msub><mi>G</mi> <mi>N</mi></msub><msup><mo stretchy="false">)</mo> <mrow><mn>1</mn><mo stretchy="false">/</mo><mn>24</mn></mrow></msup><mo>=</mo><msup><mi>κ</mi> <mrow><mn>1</mn><mo stretchy="false">/</mo><mn>12</mn></mrow></msup><mo>∝</mo><msub><mi>l</mi> <mi>s</mi></msub><msubsup><mi>g</mi> <mi>s</mi> <mrow><mn>1</mn><mo stretchy="false">/</mo><mn>12</mn></mrow></msubsup></mrow><annotation encoding="application/x-tex">l_P = (8 \pi G_N)^{1/24} = \kappa^{1/12} \propto l_s g_s^{1/12}</annotation></semantics></math></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a><math class='maruku-mathml' display='inline' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>M</mi> <mi>p</mi></msub><mo>=</mo><msubsup><mi>l</mi> <mi>p</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup></mrow><annotation encoding='application/x-tex'>M_p = l_p^{-1}</annotation></semantics></math></p>
+<p><a class="existingWikiWord" href="/nlab/show/Planck+mass">Planck mass</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mi>p</mi></msub><mo>=</mo><msubsup><mi>l</mi> <mi>p</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msubsup></mrow><annotation encoding="application/x-tex">M_p = l_p^{-1}</annotation></semantics></math></p>
 </li>
 </ul>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_66ee1f9548f7186612b52b0e01392ebc3a29dfca_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><munder><munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mn>6</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow></munder><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle="false"><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><munder><munder><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle="false"><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle="false"><mfrac><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow><mn>6</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow></munder><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><msub><mstyle mathvariant="bold"><mn>1</mn></mstyle> <mn>2</mn></msub><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle="false"><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><msub><mstyle mathvariant="bold"><mn>1</mn></mstyle> <mn>3</mn></msub><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
   \left(
     diag\left( e^{2\pi i \tfrac{1}{3}}  \right)\;,\;
     \underset{ 
@@ -349,49 +352,32 @@ margin-left: 0em;
     diag\left( e^{2\pi i \tfrac{1}{3}}  \right) \mathbf{1}_3
   \right)
 
-</annotation></semantics></math></div>
-<p><h1 id='section_table_of_contents'>Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#section_Hello'>Hello</a></li>
-<ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
-</ul>
-<li><a href='#section_Hei'>Hei</a></li>
-<ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
-<ul>
-<li><a href='#section_Hello_hello_hello'>Hello hello hello</a></li>
-</ul>
-<li><a href='#section_Hello_hello'>Hello hello</a></li>
-</ul>
-</ul>
-</div>
-</p>
-<h2 id='section_Hello'>Hello</h2>
+</annotation></semantics></math></div><h2 id="section_Hello">Hello</h2>
 <p>Bonjour</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
+<h3 id="section_Hello_hello">Hello hello</h3>
 <p>Bonjour</p>
-<h2 id='section_Hei'>Hei</h2>
+<h2 id="section_Hei">Hei</h2>
 <p>Bonjour</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
+<h3 id="section_Hello_hello">Hello hello</h3>
 <p>Grand!</p>
-<h4 id='section_Hello_hello_hello'>Hello hello hello</h4>
+<h4 id="section_Hello_hello_hello">Hello hello hello</h4>
 <p>Nearly finished</p>
-<h3 id='section_Hello_hello'>Hello hello</h3>
+<h3 id="section_Hello_hello">Hello hello</h3>
 <p>Finished</p>
+</body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September  2, 2018 at 08:54:09.
+  Last revised on September  5, 2018 at 16:42:05.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1670" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1670 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1671" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1671 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
