--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,6 +309,8 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<p>Test</p>
+
 <ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+tension">string tension</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mn>2</mn><mi>π</mi><msup><mi>α</mi> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">T = 1/(2\pi \alpha^\prime)</annotation></semantics></math></p>
@@ -352,7 +354,27 @@ margin-left: 0em;
     diag\left( e^{2\pi i \tfrac{1}{3}}  \right) \mathbf{1}_3
   \right)
 
-</annotation></semantics></math></div><h2 id="section_Hello">Hello</h2>
+</annotation></semantics></math></div>
+
+<h1 id='section_table_of_contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#section_Hello'>Hello</a></li>
+<ul>
+<li><a href='#section_Hello_hello'>Hello hello</a></li>
+</ul>
+<li><a href='#section_Hei'>Hei</a></li>
+<ul>
+<li><a href='#section_Hello_hello'>Hello hello</a></li>
+<ul>
+<li><a href='#section_Hello_hello_hello'>Hello hello hello</a></li>
+</ul>
+<li><a href='#section_Hello_hello'>Hello hello</a></li>
+</ul>
+</ul>
+</div>
+
+<h2 id="section_Hello">Hello</h2>
 <p>Bonjour</p>
 <h3 id="section_Hello_hello">Hello hello</h3>
 <p>Bonjour</p>
@@ -370,7 +392,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  5, 2018 at 16:42:05.
+  Last revised on September  5, 2018 at 17:40:27.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
