--- a/pages/18702.html
+++ b/pages/18702.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -396,7 +396,7 @@ margin-left: 0em;
 <p>reviewed in</p>
 
 <ul>
-<li id="Baraglia18"><a class="existingWikiWord" href="/nlab/show/David+Baraglia">David Baraglia</a>, <em>Topological recursion and Bergman tau functions for the Hitchin system</em>, talk at BANFF, Sept. 2018 (<a href="http://www.birs.ca/events/2018/5-day-workshops/18w5025/videos/watch/201809060845-Baraglia.html">recording</a>)</li>
+<li id="Baraglia18"><a class="existingWikiWord" href="/nlab/show/David+Baraglia">David Baraglia</a>, <em>Topological recursion and Bergman tau functions for the Hitchin system</em>, talk at <em><a href="http://www.birs.ca/events/2018/5-day-workshops/18w5025">Tau Functions of Integrable Systems and Their Applications</a></em>, Banff 2018 (<a href="http://www.birs.ca/events/2018/5-day-workshops/18w5025/videos/watch/201809060845-Baraglia.html">recording</a>)</li>
 </ul>
 
 <h3 id="relation_to_topological_string_and_mirror_symmetry">Relation to topological string and mirror symmetry</h3>
@@ -436,7 +436,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  7, 2018 at 14:54:42.
+  Last revised on September  7, 2018 at 15:02:07.
   See the <a href="https://ncatlab.org/nlab/history/topological recursion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
