--- a/pages/6807.html
+++ b/pages/6807.html
@@ -559,7 +559,7 @@ margin-left: 0em;
 <div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
-<p>The <em>BFSS matrix model</em> (<a href="#BanksFischlerShenkerSusskind96">Banks-Fischler-Shenker-Susskind 96</a>) is the description of the <a class="existingWikiWord" href="/nlab/show/worldline">worldline</a> dynamics of interacting <a class="existingWikiWord" href="/nlab/show/D0-branes">D0-branes</a>. In the limit of large number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> of D0 branes supposed to encode the <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">strong coupling limit</a> of <a class="existingWikiWord" href="/nlab/show/type+IIA+string+theory">type IIA string theory</a> (see also at <em><a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a></em>).</p>
+<p>The <em>BFSS matrix model</em> (<a href="#BanksFischlerShenkerSusskind96">Banks-Fischler-Shenker-Susskind 96</a>, <a href="#Seiberg97">Seiberg 97</a>) is the description of the <a class="existingWikiWord" href="/nlab/show/worldline">worldline</a> dynamics of interacting <a class="existingWikiWord" href="/nlab/show/D0-branes">D0-branes</a>. In the limit of large number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> of D0 branes supposed to encode the <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">strong coupling limit</a> of <a class="existingWikiWord" href="/nlab/show/type+IIA+string+theory">type IIA string theory</a> (see also at <em><a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a></em>).</p>
 
 <p>The BFSS matrix model was argued to arise in several equivalent ways:</p>
 
@@ -601,10 +601,22 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>The original article is</p>
+<p>The original article are</p>
 
 <ul>
-<li id="BanksFischlerShenkerSusskind96"><a class="existingWikiWord" href="/nlab/show/Tom+Banks">Tom Banks</a>, <a class="existingWikiWord" href="/nlab/show/Willy+Fischler">Willy Fischler</a>, S.H. Shenker and <a class="existingWikiWord" href="/nlab/show/Leonard+Susskind">Leonard Susskind</a>, <em>M Theory As A Matrix Model: A Conjecture</em> Phys. Rev. D55 (1997). (<a href="http://arxiv.org/abs/hep-th/9610043">arXiv:hep-th/9610043</a>).</li>
+<li id="BanksFischlerShenkerSusskind96">
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Banks">Tom Banks</a>, <a class="existingWikiWord" href="/nlab/show/Willy+Fischler">Willy Fischler</a>, S.H. Shenker and <a class="existingWikiWord" href="/nlab/show/Leonard+Susskind">Leonard Susskind</a>, <em>M Theory As A Matrix Model: A Conjecture</em> Phys. Rev. D55 (1997). (<a href="http://arxiv.org/abs/hep-th/9610043">arXiv:hep-th/9610043</a>)</p>
+</li>
+
+<li id="Seiberg97">
+<p><a class="existingWikiWord" href="/nlab/show/Nathan+Seiberg">Nathan Seiberg</a>, <em>Why is the Matrix Model Correct?</em>, Phys.Rev.Lett.79:3577-3580, 1997 (<a href="https://arxiv.org/abs/hep-th/9710009">arXiv:hep-th/9710009</a>)</p>
+</li>
+</ul>
+
+<p>Review includes</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Washington+Taylor">Washington Taylor</a>, <em>M(atrix) Theory: Matrix Quantum Mechanics as a Fundamental Theory</em>, Rev.Mod.Phys.73:419-462,2001 (<a href="https://arxiv.org/abs/hep-th/0101126">arXiv:hep-th/0101126</a>)</li>
 </ul>
 
 <p>The interpretation of the BFSS model as a regularized <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory is discussed in</p>
@@ -631,6 +643,22 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Paul+Townsend">Paul Townsend</a>, <em>M(embrane) theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>T</mi> <mn>0</mn></msup></mrow><annotation encoding="application/x-tex">T^0</annotation></semantics></math></em>, Nucl.Phys.Proc.Suppl.68:11-16,1998 (<a href="http://arxiv.org/abs/hep-th/9708034">arXiv:hep-th/9708034</a>)</li>
 </ul>
 
+<p>Computation of <a class="existingWikiWord" href="/nlab/show/graviton">graviton</a> <a class="existingWikiWord" href="/nlab/show/scattering+amplitudes">scattering amplitudes</a>:</p>
+
+<ul>
+<li>
+<p>M. Fabbrichesi, <em>Graviton scattering in matrix theory and supergravity</em>, in In: Ceresole A., Kounnas C., <a class="existingWikiWord" href="/nlab/show/Dieter+L%C3%BCst">Dieter Lüst</a> , <a class="existingWikiWord" href="/nlab/show/Stefan+Theisen">Stefan Theisen</a> (eds.) <em>Quantum Aspects of Gauge Theories, Supersymmetry and Unification</em>, Lecture Notes in Physics, vol 525. Springer, Berlin, Heidelberg (<a href="https://arxiv.org/abs/hep-th/9811204">arXiv:hep-th/9811204</a>)</p>
+</li>
+
+<li>
+<p>Robert Hellinga, Jan Plefka, Marco Serone, Andrew Waldron, <em>Three-graviton scattering in M-theory</em>, Nuclear Physics B Volume 559, Issues 1–2, 18 October 1999, Pages 184-204 (<a href="https://arxiv.org/abs/hep-th/9905183">arXiv:hep-th/9905183</a>)</p>
+</li>
+
+<li>
+<p>Robert Echols, <em>M-theory, supergravity and the matrix model: Graviton scattering and non-renormalization theorems</em>, PhD thesis, 1999 <a href="https://web.calpoly.edu/~rechols/phys403/mythesis.pdf">pdf</a></p>
+</li>
+</ul>
+
 <p>Numerical computation:</p>
 
 <ul>
@@ -654,7 +682,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 05:45:44.
+  Last revised on September  8, 2018 at 06:21:25.
   See the <a href="https://ncatlab.org/nlab/history/BFSS matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
