--- a/pages/8928.html
+++ b/pages/8928.html
@@ -714,7 +714,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#black_hole_entropy">Black hole entropy</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#introductions_and_review">Introductions and Review</a></li><li><a href="#original_articles">Original articles</a></li><li><a href="#relation_to_topological_string_amplitudes">Relation to topological string amplitudes</a></li></ul></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#black_hole_entropy">Black hole entropy</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#introductions_and_review">Introductions and Review</a></li><li><a href="#original_articles">Original articles</a></li><li><a href="#discussion_in_bfss_matrix_theory">Discussion in BFSS matrix theory</a></li><li><a href="#relation_to_topological_string_amplitudes">Relation to topological string amplitudes</a></li></ul></li></ul></div>
 <h2 id="black_hole_entropy">Black hole entropy</h2>
 
 <p>In (<a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative</a>) <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> the <a class="existingWikiWord" href="/nlab/show/Bekenstein-Hawking+entropy">Bekenstein-Hawking entropy</a> associated to a macroscopic <a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> finds an explanation as follows:</p>
@@ -986,6 +986,40 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="discussion_in_bfss_matrix_theory">Discussion in BFSS matrix theory</h3>
+
+<p>Discussion of black holes via the <a class="existingWikiWord" href="/nlab/show/BFSS+matrix+model">BFSS matrix model</a> includes the following:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Banks">Tom Banks</a>, <a class="existingWikiWord" href="/nlab/show/Willy+Fischler">Willy Fischler</a>, <a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Leonard+Susskind">Leonard Susskind</a>, <em>Schwarzschild Black Holes from Matrix Theory</em>, Phys.Rev.Lett.80:226-229,1998 (<a href="https://arxiv.org/abs/hep-th/9709091">arXiv:hep-th/9709091</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Banks">Tom Banks</a>, <a class="existingWikiWord" href="/nlab/show/Willy+Fischler">Willy Fischler</a>, <a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Leonard+Susskind">Leonard Susskind</a>, <em>Schwarzchild Black Holes in Matrix Theory II</em>, JHEP 9801:008,1998 (<a href="https://arxiv.org/abs/hep-th/9711005">arXiv:hep-th/9711005</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Leonard+Susskind">Leonard Susskind</a>, <em>Schwarzschild Black Holes in Various Dimensions from Matrix Theory</em>, Phys.Lett.B416:62-66,1998 (<a href="https://arxiv.org/abs/hep-th/9709108">arXiv:hep-th/9709108</a>)</p>
+</li>
+
+<li>
+<p>Edi Halyo, <em>Six Dimensional Schwarzschild Black Holes in M(atrix) Theory</em> (<a href="https://arxiv.org/abs/hep-th/9709225">arXiv:hep-th/9709225</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gary+Horowitz">Gary Horowitz</a>, <a class="existingWikiWord" href="/nlab/show/Emil+Martinec">Emil Martinec</a>, <em>Comments on Black Holes in Matrix Theory</em>, Phys. Rev. D 57, 4935 (1998) (<a href="https://arxiv.org/abs/hep-th/9710217">arXiv:hep-th/9710217</a>)</p>
+</li>
+
+<li id="KabatTaylor97">
+<p>Daniel Kabat, <a class="existingWikiWord" href="/nlab/show/Washington+Taylor">Washington Taylor</a>, <em>Spherical membranes in Matrix theory</em>, Adv.Theor.Math.Phys.2:181-206,1998 (<a href="https://arxiv.org/abs/hep-th/9711078">arXiv:hep-th/9711078</a>)</p>
+</li>
+
+<li>
+<p>Yoshifumi Hyakutake, <em>Black Hole and Fuzzy Objects in BFSS Matrix Model</em> (<a href="https://arxiv.org/abs/1801.07869">arXiv:1801.07869</a>)</p>
+</li>
+</ul>
+
 <h3 id="relation_to_topological_string_amplitudes">Relation to topological string amplitudes</h3>
 
 <p>Discussion of black hole microstates via the <a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>‘s <a class="existingWikiWord" href="/nlab/show/Gopakumar-Vafa+invariants">Gopakumar-Vafa invariants</a>:</p>
@@ -1005,14 +1039,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  6, 2018 at 02:54:58.
+  Last revised on September  8, 2018 at 10:54:20.
   See the <a href="https://ncatlab.org/nlab/history/black holes in string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+holes+in+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+holes+in+string+theory/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/black+holes+in+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+holes+in+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/black+holes+in+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+holes+in+string+theory/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/black+holes+in+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+holes+in+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/black holes in string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
