--- a/pages/6048.html
+++ b/pages/6048.html
@@ -731,7 +731,7 @@ margin-left: 0em;
 <li id="BergshoeffSezginTownsend87"><a class="existingWikiWord" href="/nlab/show/Eric+Bergshoeff">Eric Bergshoeff</a>, <a class="existingWikiWord" href="/nlab/show/Ergin+Sezgin">Ergin Sezgin</a>, and <a class="existingWikiWord" href="/nlab/show/Paul+Townsend">Paul Townsend</a>, <em>Supermembranes and eleven-dimensional supergravity</em>, Phys. Lett. B189 (1987) 75–78. (<a href="http://inspirehep.net/record/248230/">spire:248230</a>)</li>
 </ul>
 
-<p>and its <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a> of the was first explored in</p>
+<p>and its <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a> of the was explored in</p>
 
 <ul>
 <li id="DuffInamiPopeSezginStelle88">
@@ -744,6 +744,10 @@ margin-left: 0em;
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Bernard+de+Wit">Bernard de Wit</a>, W. Lüscher, <a class="existingWikiWord" href="/nlab/show/Hermann+Nicolai">Hermann Nicolai</a>, <em>The supermembrane is unstable</em>, Nucl. Phys. B320 (1989) 135.</p>
+</li>
+
+<li id="KabatTaylor97">
+<p>Daniel Kabat, <a class="existingWikiWord" href="/nlab/show/Washington+Taylor">Washington Taylor</a>, section 2 of <em>Spherical membranes in Matrix theory</em>, Adv.Theor.Math.Phys.2:181-206,1998 (<a href="https://arxiv.org/abs/hep-th/9711078">arXiv:hep-th/9711078</a>)</p>
 </li>
 </ul>
 
@@ -956,14 +960,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 05:47:33.
+  Last revised on September  8, 2018 at 11:19:06.
   See the <a href="https://ncatlab.org/nlab/history/M2-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M2-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M2-brane/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/M2-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M2-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M2-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M2-brane/56" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(56 revisions)</span> | <a href="/nlab/show/diff/M2-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M2-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M2-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
