--- a/pages/16672.html
+++ b/pages/16672.html
@@ -308,38 +308,46 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li><a href='http://theory.uchicago.edu/~sethi/'>webpage</a></li>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
+<body>
+<ul>
+<li><a href="http://theory.uchicago.edu/~sethi/">webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_cda48e3695f55caf13a0259e80a0ecb4a009404d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/flux+compactification'>flux compactification</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/flux+compactification">flux compactification</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a></p>
 </li>
 </ul>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 29, 2018 at 11:05:48.
+  Last revised on September  9, 2018 at 13:47:45.
   See the <a href="https://ncatlab.org/nlab/history/Savdeep Sethi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Savdeep+Sethi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Savdeep+Sethi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Savdeep+Sethi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Savdeep+Sethi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Savdeep+Sethi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Savdeep+Sethi/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Savdeep+Sethi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Savdeep+Sethi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Savdeep Sethi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
