--- a/pages/5634.html
+++ b/pages/5634.html
@@ -920,15 +920,19 @@ margin-left: 0em;
 <p>Shigenori Seki, <em>Discrete Torsion and Branes in M-theory from Mathematical Viewpoint</em>, Nucl.Phys. B606 (2001) 689-698 (<a href="https://arxiv.org/abs/hep-th/0103117">arXiv:hep-th/0103117</a>)</p>
 </li>
 
-<li>
+<li id="BDHKMMS01">
 <p><a class="existingWikiWord" href="/nlab/show/Jan+de+Boer">Jan de Boer</a>, <a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, <a class="existingWikiWord" href="/nlab/show/Kentaro+Hori">Kentaro Hori</a>, <a class="existingWikiWord" href="/nlab/show/Arjan+Keurentjes">Arjan Keurentjes</a>, <a class="existingWikiWord" href="/nlab/show/John+Morgan">John Morgan</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <a class="existingWikiWord" href="/nlab/show/Savdeep+Sethi">Savdeep Sethi</a>, section 4.6.2 of <em>Triples, Fluxes, and Strings</em>, Adv.Theor.Math.Phys. 4 (2002) 995-1186 (<a href="https://arxiv.org/abs/hep-th/0103170">arXiv:hep-th/0103170</a>)</p>
 </li>
 </ul>
 
-<p>and applied to discussion of <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a> (<a class="existingWikiWord" href="/nlab/show/ABJM+model">ABJM model</a>) in</p>
+<p>and applied to discussion of <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a> (<a class="existingWikiWord" href="/nlab/show/BLG+model">BLG model</a>/<a class="existingWikiWord" href="/nlab/show/ABJM+model">ABJM model</a>) in</p>
 
 <ul>
-<li>
+<li id="Sethi98">
+<p><a class="existingWikiWord" href="/nlab/show/Savdeep+Sethi">Savdeep Sethi</a>, <em>A Relation Between <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>8</mn></mrow><annotation encoding="application/x-tex">N=8</annotation></semantics></math> Gauge Theories in Three Dimensions</em>, JHEP 9811:003,1998 (<a href="https://arxiv.org/abs/hep-th/9809162">arXiv:hep-th/9809162</a>)</p>
+</li>
+
+<li id="AharonyBergmanJafferis08">
 <p><a class="existingWikiWord" href="/nlab/show/Ofer+Aharony">Ofer Aharony</a>, Oren Bergman, Daniel Louis Jafferis, <em>Fractional M2-branes</em>, JHEP 0811:043,2008 (<a href="https://arxiv.org/abs/0807.4924">arXiv:0807.4924</a>)</p>
 </li>
 
@@ -936,20 +940,22 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Mauricio+Romo">Mauricio Romo</a>, <em>Aspects of ABJM orbifolds with discrete torsion</em>, J. High Energ. Phys. (2011) 2011 (<a href="https://arxiv.org/abs/1011.4733">arXiv:1011.4733</a>)</p>
 </li>
 </ul>
+
+<p>See also at <em><a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a></em> the section <a href="finite+rotation+group#GroupCohomology">on group cohomology</a>.</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 05:15:12.
+  Last revised on September  9, 2018 at 13:47:25.
   See the <a href="https://ncatlab.org/nlab/history/discrete torsion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/discrete torsion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
