--- a/pages/19668.html
+++ b/pages/19668.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Tammo tom Dieck in nLab
+      Transformation Groups and Representation Theory in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Tammo tom Dieck
+      Transformation Groups and Representation Theory
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8965/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,52 +312,48 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
-<li><a href="https://de.wikipedia.org/wiki/Tammo_tom_Dieck">German Wikipedia entry</a></li>
-</ul>
-
-<h2 id="writings">writings</h2>
-
-<ul>
-<li id="tomDieck79"><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Lecture Notes in Mathematics 766, Springer 1979</li>
-</ul>
-
-<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></p>
-</li>
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>,</p>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a></p>
-</li>
+<p><em>Transformation Groups and Representation Theory</em></p>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/CW-approximation">CW-approximation</a></p>
+<p>Lecture Notes in Mathematics 766</p>
+
+<p>Springer 1979</p>
 </li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
+<p>on <a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a>, the <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>.</p>
+
+<p><a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-Front.pdf">front matter</a></p>
+
+<p><a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-Burnside.pdf">Chapter 1: The Burnside ring</a></p>
+
+<p><a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-homotopy.pdf">Chapter 8: Equivariant homotopy theory</a></p>
+
+<p><a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-Back.pdf">references</a></p>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/reference">reference</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 11:31:08.
-  See the <a href="https://ncatlab.org/nlab/history/Tammo tom Dieck" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 10, 2018 at 11:43:28.
+  See the <a href="https://ncatlab.org/nlab/history/Transformation Groups and Representation Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tammo+tom+Dieck" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tammo+tom+Dieck/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Tammo+tom+Dieck" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tammo+tom+Dieck" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Tammo tom Dieck/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Transformation+Groups+and+Representation+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Transformation Groups and Representation Theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Tammo+tom+Dieck" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Transformation+Groups+and+Representation+Theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Tammo+tom+Dieck" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Transformation+Groups+and+Representation+Theory" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Tammo+tom+Dieck" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Transformation+Groups+and+Representation+Theory" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
