--- a/pages/3260.html
+++ b/pages/3260.html
@@ -983,9 +983,13 @@ margin-left: 0em;
 <li id="May96"><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Equivariant homotopy and cohomology theory</em>, CBMS Regional Conference Series in Mathematics, vol. 91, Published for the Conference Board of the Mathematical Sciences, Washington, DC, 1996. With contributions by M. Cole, G. Comezana, S. Costenoble, A. D. Elmenddorf, J. P. C. Greenlees, L. G. Lewis, Jr., R. J. Piacenza, G. Triantafillou, and S. Waner. (<a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/alaska1.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/MayEtAlEquivariant96.pdf" title="pdf">pdf</a>)</li>
 </ul>
 
-<p>Other survey includes</p>
+<p>Other accounts include</p>
 
 <ul>
+<li id="tomDieck79">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Lecture Notes in Mathematics 766, Springer 1979</p>
+</li>
+
 <li id="Schwede12">
 <p><a class="existingWikiWord" href="/nlab/show/Stefan+Schwede">Stefan Schwede</a>, appendix A.4 of of <em><a class="existingWikiWord" href="/nlab/show/Symmetric+spectra">Symmetric spectra</a></em> (2012)</p>
 </li>
@@ -1032,14 +1036,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 06:44:43.
+  Last revised on September 10, 2018 at 11:32:16.
   See the <a href="https://ncatlab.org/nlab/history/equivariant homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
