--- a/pages/6797.html
+++ b/pages/6797.html
@@ -1179,7 +1179,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Pan Kessel, <em>The Very Basics of Higher-Spin Theory</em> ([arXiv:1702.03694] (https://arxiv.org/abs/1702.03694))</p>
+<p>Pan Kessel, <em>The Very Basics of Higher-Spin Theory</em> (<a href="https://arxiv.org/abs/1702.03694">arXiv:1702.03694</a>)</p>
 </li>
 
 <li>
@@ -1298,14 +1298,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 08:43:37.
+  Last revised on September 10, 2018 at 11:03:23.
   See the <a href="https://ncatlab.org/nlab/history/higher spin gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+spin+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+spin+gauge+theory/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/higher+spin+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+spin+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/higher+spin+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+spin+gauge+theory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/higher+spin+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+spin+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/higher spin gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
